--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "format:write": "prettier --write **/*.ts",
     "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
+    "lint-fix": "npx eslint . --fix -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.ts --license licenses.txt",
     "package:watch": "npm run package -- --watch",
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
@@ -67,15 +68,18 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "node-filter-async": "^2.0.0"
   },
   "devDependencies": {
+    "@octokit/openapi-types": "^19.0.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.7",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.51.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-jsonc": "^2.10.0",
@@ -86,6 +90,7 @@
     "make-coverage-badge": "^1.2.0",
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.1.1",
+    "tiny-invariant": "^1.3.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
