--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
-    "rootDir": "./src",
+    "rootDirs": ["./src", "./__tests__"],
     "moduleResolution": "NodeNext",
     "baseUrl": "./",
     "sourceMap": true,
