--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,8 @@ jobs:
           tags: |
             tagOne
             tagTwo
-      - run: sudo apt install jq
-        shell: bash
       - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+        env:
+          MATCHED: ${{ steps.test-action.outputs.matched }}
+        run: echo $MATCHED | grep "testOne"
         shell: bash
