ci: fix wrong output variable check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,6 @@ jobs:
             tagTwo
       - name: Print Output
         env:
-          MATCHED: ${{ steps.test-action.outputs.matched }}
+          MATCHED: ${{ steps.test-action.outputs.environments }}
         run: echo $MATCHED | grep "testOne"
         shell: bash
