--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matched-environments",
+  "name": "filtered-env",
   "description": "Use docker tags and a Github envionment variable to create a list of environments to deploy to",
   "version": "0.0.1",
   "author": "Brian Adams <wreality@gmail.com>",
@@ -34,7 +34,7 @@
     "package:watch": "npm run package -- --watch",
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
     "all": "npm run format:write && npm run lint && npm run test && npm run package",
-    "ghadocs": "github-action-readme-generator --readme README.md && git add README.md"
+    "ghadocs": "github-action-readme-generator --readme README.md"
   },
   "license": "MIT",
   "jest": {
@@ -84,7 +84,7 @@
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "github-action-readme-generator": "^1.6.0",
+    "github-action-readme-generator": "^1.7.0",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "make-coverage-badge": "^1.2.0",
